# dante-corpus

./: .gitignore  Makefile  PLAN.md  README.md  model.mk  pyproject.toml
dante_corpus/: README.md  __init__.py  _paths.py  api.py  build_morph.py  build_quotes.py  cli.py  dep.py  hashes.py  morph.py  np.py  skel.py  statusline.py  tokenizer.py
dep/: CORRECTIONS.md  Makefile  README.md  dep.py
dep/inferno/: 01.tsv  02.tsv  03.tsv  04.tsv  05.tsv  06.tsv  07.tsv  08.tsv  09.tsv  10.tsv  11.tsv  12.tsv  13.tsv  14.tsv  15.tsv  16.tsv  17.tsv  18.tsv  19.tsv  20.tsv  21.tsv  22.tsv  23.tsv  24.tsv  25.tsv  26.tsv  27.tsv  28.tsv  29.tsv  30.tsv  31.tsv  32.tsv  33.tsv  34.tsv
dep/paradiso/: 01.tsv  02.tsv  03.tsv  04.tsv  05.tsv  06.tsv  07.tsv  08.tsv  09.tsv  10.tsv  11.tsv  12.tsv  13.tsv  14.tsv  15.tsv  16.tsv  17.tsv  18.tsv  19.tsv  20.tsv  21.tsv  22.tsv  23.tsv  24.tsv  25.tsv  26.tsv  27.tsv  28.tsv  29.tsv  30.tsv  31.tsv  32.tsv  33.tsv
dep/purgatorio/: 01.tsv  02.tsv  03.tsv  04.tsv  05.tsv  06.tsv  07.tsv  08.tsv  09.tsv  10.tsv  11.tsv  12.tsv  13.tsv  14.tsv  15.tsv  16.tsv  17.tsv  18.tsv  19.tsv  20.tsv  21.tsv  22.tsv  23.tsv  24.tsv  25.tsv  26.tsv  27.tsv  28.tsv  29.tsv  30.tsv  31.tsv  32.tsv  33.tsv
morph/: CORRECTIONS.md  Makefile  README.md  morph.py
morph/inferno/: 01.tsv  02.tsv  03.tsv  (+31 more)
np/: CORRECTIONS.md  Makefile  README.md  np.py
quotes/: Makefile  README.md  quotes.py
skel/: CORRECTIONS.md  Makefile  PLAN.md  skel.py
src/: Makefile  README.md  split.py
tests/: test_dep.py  test_hashes.py  test_morph.py  test_skel.py
(+270 files in other folders)
